noinst_LTLIBRARIES = libnettle.la

libnettle_la_SOURCES = macros.h nettle-meta.h keymap.h rotors.h parity.h \
	sha1.c sha.h sha1-meta.c md5.h md5.c md5-meta.c md4.h md4.c md4-meta.c \
	memxor.c memxor.h \
	hmac.c hmac.h hmac-md5.c hmac-sha1.c \
	aes.h aes.c aes-internal.h \
	aes-encrypt.c aes-encrypt-table.c aes-decrypt.c aes-decrypt-table.c \
	aes-set-encrypt-key.c aes-set-decrypt-key.c \
	des3.c des.c des.h desCode.h \
	cbc.h cbc.c cbc-cts.h cbc-cts.c cbc-mac.h cbc-mac.c
